==> yh-sb/mcu-framework/src/hal/ESP8266/spi/spi.cpp <==
#include <stddef.h>
#include <stdlib.h>
#include <string.h>
#include <algorithm>
#include <climits>
#include "common/assert.h"
#include "spi.hpp"
#include "ESP8266_RTOS_SDK/components/esp8266/include/esp8266/spi_register.h"
#include "ESP8266_RTOS_SDK/components/esp8266/include/esp8266/spi_struct.h"
#include "ESP8266_RTOS_SDK/components/esp8266/include/rom/ets_sys.h"
#include "ESP8266_RTOS_SDK/components/esp8266/include/esp8266/pin_mux_register.h"

void spi::baud(uint32_t baud)
{
	ASSERT(baud > 0 && baud <= APB_CLK_FREQ);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_baud = baud;
	
	spi_div_t div;
	uint16_t prediv;
	calc_clk(_spi, _baud, &div, &prediv);
	
	if(div == SPI_DIV_80MHz)
	{
		SET_PERI_REG_MASK(PERIPHS_IO_MUX_CONF_U, _spi == SPI_0 ?
			SPI0_CLK_EQU_SYS_CLK : SPI1_CLK_EQU_SYS_CLK);
		spi_devs[_spi]->clock.clk_equ_sysclk = true;
	}
	else
	{
		CLEAR_PERI_REG_MASK(PERIPHS_IO_MUX_CONF_U, _spi == SPI_0 ?
			SPI0_CLK_EQU_SYS_CLK : SPI1_CLK_EQU_SYS_CLK);
		spi_dev_t &spi_dev = *spi_devs[_spi];
		spi_dev.clock.clk_equ_sysclk = false;
		spi_dev.clock.clkdiv_pre = prediv;
		spi_dev.clock.clkcnt_n = div - 1;
		spi_dev.clock.clkcnt_l = div - 1;
		spi_dev.clock.clkcnt_h = (div / 2) - 1;
	}
	
	xSemaphoreGive(api_lock);
}

void spi::cpol(cpol_t cpol)
{
	ASSERT(cpol <= CPOL_1);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cpol = cpol;
	spi_devs[_spi]->pin.ck_idle_edge = _cpol == CPOL_1;
	
	xSemaphoreGive(api_lock);
}

void spi::cpha(cpha_t cpha)
{
	ASSERT(cpha <= CPHA_1);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cpha = cpha;
	spi_devs[_spi]->user.ck_out_edge = _cpha == CPHA_1;
	
	xSemaphoreGive(api_lock);
}

void spi::bit_order(bit_order_t bit_order)
{
	ASSERT(bit_order <= BIT_ORDER_LSB);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_bit_order = bit_order;
	
	spi_devs[_spi]->ctrl.wr_bit_order = _bit_order == BIT_ORDER_LSB;
	spi_devs[_spi]->ctrl.rd_bit_order = _bit_order == BIT_ORDER_LSB;
	
	xSemaphoreGive(api_lock);
}

int8_t spi::read(void *buff, size_t size, gpio *cs)
{
	ASSERT(buff);
	ASSERT(size > 0);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cs = cs;
	if(_cs)
		_cs->set(0);
	
	task = xTaskGetCurrentTaskHandle();
	rx_buff = (uint8_t *)buff;
	tx_buff = NULL;
	remain = size;
	uint8_t payload_size = std::min<size_t>(size, fifo_size);
	
	spi_dev_t &spi_dev = *spi_devs[_spi];
	spi_dev.user.usr_mosi = false;
	spi_dev.user.usr_miso = true;
	spi_dev.user1.usr_miso_bitlen = (payload_size * CHAR_BIT) - 1;
	
	portENTER_CRITICAL();
	spi_dev.cmd.usr = 1;
	spi_dev.slave.trans_done = false;
	spi_dev.slave.trans_inten = true;
	portEXIT_CRITICAL();
	
	// Task will be unlocked later from isr
	ulTaskNotifyTake(true, portMAX_DELAY);
	
	xSemaphoreGive(api_lock);
	
	return irq_res;
}

int8_t spi::exch(void *buff_tx, void *buff_rx, size_t size, gpio *cs)
{
	ASSERT(buff_tx);
	ASSERT(buff_rx);
	ASSERT(size > 0);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cs = cs;
	if(_cs)
		_cs->set(0);
	
	task = xTaskGetCurrentTaskHandle();
	tx_buff = (uint8_t *)buff_tx;
	rx_buff = (uint8_t *)buff_rx;
	remain = size;
	uint8_t payload_size = std::min<size_t>(size, fifo_size);
	
	spi_dev_t &spi_dev = *spi_devs[_spi];
	spi_dev.user.usr_mosi = true;
	spi_dev.user.usr_miso = true;
	spi_dev.user1.usr_mosi_bitlen = (payload_size * CHAR_BIT) - 1;
	spi_dev.user1.usr_miso_bitlen = (payload_size * CHAR_BIT) - 1;
	memcpy((void *)spi_dev.data_buf, tx_buff, payload_size);
	tx_buff += payload_size;
	
	portENTER_CRITICAL();
	spi_dev.cmd.usr = 1;
	spi_dev.slave.trans_done = false;
	spi_dev.slave.trans_inten = true;
	portEXIT_CRITICAL();
	
	// Task will be unlocked later from isr
	ulTaskNotifyTake(true, portMAX_DELAY);
	
	xSemaphoreGive(api_lock);
	
	return irq_res;
}
