==> yh-sb/mcu-framework/src/hal/STM32F4/spi/spi.cpp <==
#include <stddef.h>
#include <stdlib.h>
#include <string.h>
#include "common/assert.h"
#include "spi.hpp"
#include "rcc/rcc.hpp"
#include "CMSIS/Device/STM32F4xx/Include/stm32f4xx.h"
#include "CMSIS/Include/core_cm4.h"
#define IRQ_PRIORITY 3

void spi::baud(uint32_t baud)
{
	ASSERT(baud > 0);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	uint8_t presc = calc_presc(_spi, _baud);
	
	_baud = baud;
	SPI_TypeDef *spi = spi_list[_spi];
	
	spi->CR1 &= ~(SPI_CR1_SPE | SPI_CR1_BR);
	spi->CR1 |= ((presc << SPI_CR1_BR_Pos) & SPI_CR1_BR) | SPI_CR1_SPE;
	
	xSemaphoreGive(api_lock);
}

void spi::cpol(cpol_t cpol)
{
	ASSERT(cpol <= CPOL_1);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cpol = cpol;
	SPI_TypeDef *spi = spi_list[_spi];
	
	spi->CR1 &= ~SPI_CR1_SPE;
	
	if(_cpol == CPOL_0)
		spi->CR1 &= ~SPI_CR1_CPOL;
	else
		spi->CR1 |= SPI_CR1_CPOL;
	
	spi->CR1 |= SPI_CR1_SPE;
	
	xSemaphoreGive(api_lock);
}

void spi::cpha(cpha_t cpha)
{
	ASSERT(cpha <= CPHA_1);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cpha = cpha;
	SPI_TypeDef *spi = spi_list[_spi];
	
	spi->CR1 &= ~SPI_CR1_SPE;
	
	if(_cpha == CPHA_0)
		spi->CR1 &= ~SPI_CR1_CPHA;
	else
		spi->CR1 |= SPI_CR1_CPHA;
	
	spi->CR1 |= SPI_CR1_SPE;
	
	xSemaphoreGive(api_lock);
}

void spi::bit_order(bit_order_t bit_order)
{
	ASSERT(bit_order <= BIT_ORDER_LSB);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_bit_order = bit_order;
	SPI_TypeDef *spi = spi_list[_spi];
	
	spi->CR1 &= ~SPI_CR1_SPE;
	
	if(_bit_order == BIT_ORDER_MSB)
		spi->CR1 &= ~SPI_CR1_LSBFIRST;
	else
		spi->CR1 |= SPI_CR1_LSBFIRST;
	
	spi->CR1 |= SPI_CR1_SPE;
	
	xSemaphoreGive(api_lock);
}

int8_t spi::read(void *buff, uint16_t size, gpio *cs)
{
	ASSERT(buff);
	ASSERT(size > 0);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cs = cs;
	if(_cs)
		_cs->set(0);
	
	rx_buff = buff;
	rx_dma.dst((uint8_t*)rx_buff);
	rx_dma.size(size);
	rx_dma.start_once(on_dma_rx, this);
	
	task = xTaskGetCurrentTaskHandle();
	/* Setup tx for reception */
	tx_buff = rx_buff;
	tx_dma.src((uint8_t*)tx_buff);
	tx_dma.size(size);
	tx_dma.start_once(on_dma_tx, this);
	spi_list[_spi]->DR;
	spi_list[_spi]->CR2 |= SPI_CR2_TXDMAEN | SPI_CR2_RXDMAEN;
	
	// Task will be unlocked later from isr
	ulTaskNotifyTake(true, portMAX_DELAY);
	
	xSemaphoreGive(api_lock);
	
	return irq_res;
}

int8_t spi::exch(void *buff_tx, void *buff_rx, uint16_t size, gpio *cs)
{
	ASSERT(buff_tx);
	ASSERT(buff_rx);
	ASSERT(size > 0);
	
	xSemaphoreTake(api_lock, portMAX_DELAY);
	
	_cs = cs;
	if(_cs)
		_cs->set(0);
	
	rx_buff = buff_rx;
	rx_dma.dst((uint8_t*)rx_buff);
	rx_dma.size(size);
	spi_list[_spi]->DR;
	
	task = xTaskGetCurrentTaskHandle();
	tx_buff = buff_tx;
	tx_dma.src((uint8_t*)tx_buff);
	tx_dma.size(size);
	rx_dma.start_once(on_dma_rx, this);
	tx_dma.start_once(on_dma_tx, this);
	
	spi_list[_spi]->CR2 |= SPI_CR2_TXDMAEN | SPI_CR2_RXDMAEN;
	
	// Task will be unlocked later from isr
	ulTaskNotifyTake(true, portMAX_DELAY);
	
	xSemaphoreGive(api_lock);
	
	return irq_res;
}
